mgr/dashboard: Open sheet on datatable selection
Signed-off-by: Sebastian Krah <skrah@suse.com>

--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/pool/pool-details/pool-details.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/pool/pool-details/pool-details.component.html
@@ -1,3 +1,11 @@
+<div *ngIf="selection.hasSingleSelection"
+     class="bar">
+  <span>Details of <strong>{{ selection.first().pool_name }}</strong></span>
+  <button type="button" class="close" aria-label="Close" (click)="closeSheet()">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+
 <tabset #tabsetChild
         cdTableDetail
         *ngIf="selection.hasSingleSelection">
