--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/pool/pool-list/pool-list.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/pool/pool-list/pool-list.component.html
@@ -19,6 +19,8 @@
       </cd-table-actions>
       <cd-pool-details cdTableDetail
                        id="pool-list-details"
+                       class="sheets right"
+                       [ngClass]="{'active': selection.hasSingleSelection}"
                        [table]="table"
                        [selection]="selection"
                        [permissions]="permissions"
