--- a/src/pybind/mgr/dashboard/frontend/src/styles.scss
+++ b/src/pybind/mgr/dashboard/frontend/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'defaults';
+@import 'sheets';
 
 // Fork-Awesome
 $fa-font-path: '~fork-awesome/fonts';
